--- a/rps/index.html
+++ b/rps/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Rock, Paper, Scissors</h1>
-    <button>👊</button>
+
+    <div id="choices">
+        <button onclick="playGame('rock')">👊</button>
+        <button onclick="playGame('paper')">✋</button>
+        <button onclick="playGame('scissors')">✌️</button>
+    </div>
+
+    <div id="playerDisplay">player: </div>
+    <div id="botDisplay">bot: </div>
+    <div id="resultDisplay">its a tie!</div>
+
+    <script src="index.js"></script>
   </body>
 </html>
