--- a/rps/index.html
+++ b/rps/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>rps!~</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Rock, Paper, Scissors</h1>
 
-    <div id="choices">
+    <div class="choices">
         <button onclick="playGame('rock')">👊</button>
         <button onclick="playGame('paper')">✋</button>
         <button onclick="playGame('scissors')">✌️</button>
