--- a/rps/index.html
+++ b/rps/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rps!~</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  </head>
+    <link rel="stylesheet" href="styles.css" /><link rel="stylesheet" href="styles.css" />  
+</head>
   <body>
     <h1>Rock, Paper, Scissors</h1>
 
