--- a/rps/index.html
+++ b/rps/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- 
+    from https://www.youtube.com/watch?v=3uKdQx-SZ5A
+    -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rps!~</title>
