update main page html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nitro's js</title>
+    <link rel="stylesheet" href="styles.css" /><link rel="stylesheet" href="styles.css" />  
 </head>
 <body>
-    <h1>games</h1>
-    <div>
+    <h1>nitro's js</h1>
+
+    <h2>games<h2>
+    <div class="list">
         <ul>
             <li><a href="rps/">rock paper scissors</a></li>
         </ul>
