update result display text in index.html

--- a/rps/index.html
+++ b/rps/index.html
@@ -21,7 +21,7 @@
 
     <div id="playerDisplay">player: </div>
     <div id="botDisplay">bot: </div>
-    <div id="resultDisplay">its a tie!</div>
+    <div id="resultDisplay">its a tie!~</div>
 
     <script src="index.js"></script>
   </body>
