fix: correct bot display ID and initialize JavaScript variables

--- a/rps/index.html
+++ b/rps/index.html
@@ -20,8 +20,8 @@
     </div>
 
     <div id="playerDisplay">player: </div>
-    <div id="botDisplay">bot: </div>
-    <div id="resultDisplay">its a tie!~</div>
+    <div id="computerDisplay">bot: </div>
+    <div id="resultDisplay"></div>
 
     <script src="index.js"></script>
   </body>
